--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn tsc"
     }
   },
   "lint-staged": {
