--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-  "eslint.autoFixOnSave": true,
   "editor.formatOnSave": true,
-  "typescript.preferences.importModuleSpecifier": "auto"
+  "typescript.preferences.importModuleSpecifier": "auto",
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
