--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "react-spring": "^8.0.27",
     "styled-components": "^5.1.1",
     "styled-icons": "^10.15.0",
     "styled-normalize": "^8.0.7",
@@ -35,6 +34,8 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
