--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
-      "pre-push": "yarn tsc"
+      "pre-push": "npm run tsc"
     }
   },
   "lint-staged": {
