--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "styled-icons": "^10.15.0",
     "styled-normalize": "^8.0.7",
     "typescript": "^3.8.3",
+    "webextension-polyfill": "^0.6.0",
     "use-http": "^1.0.13"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.122",
+    "@types/firefox-webext-browser": "^78.0.1",
     "@types/jest": "^26.0.9",
     "@types/lodash": "^4.14.159",
     "@types/node": "^14.0.27",
