--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "use-http": "^1.0.13"
   },
   "devDependencies": {
-    "@types/chrome": "0.0.122",
+    "@types/firefox-webext-browser": "^78.0.1",
     "@types/jest": "^26.0.9",
     "@types/lodash": "^4.14.159",
     "@types/node": "^14.0.27",
