Setup production build

--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "REACT_APP_RUNTIME_ENV=browser react-scripts start",
-    "watch": "./scripts/watch.js",
-    "build": "react-scripts build",
+    "start": "npm run start:chrome",
+    "start:chrome": "TARGET_BROWSER=chrome ./scripts/start.js",
+    "start:firefox": "TARGET_BROWSER=firefox ./scripts/start.js",
+    "build": "npm run build:chrome",
+    "build:chrome": "TARGET_BROWSER=chrome ./scripts/build.js",
+    "build:firefox": "TARGET_BROWSER=firefox ./scripts/build.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "typecheck": "tsc",
